--- a/08.FlexBox/Project/index.html
+++ b/08.FlexBox/Project/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="about-image">
             <img
-              src="https://cdn.pixabay.com/photo/2024/01/10/16/20/woman-8499928_1280.jpg"
+              src="Assests/NexTech Team.jpeg"
               alt="NexTech team"
             />
           </div>
@@ -62,7 +62,7 @@
         <div class="portfolio-grid">
           <div class="portfolio-item">
             <img
-              src="https://cdn.pixabay.com/photo/2020/03/11/15/13/engineer-4922413_1280.jpg"
+              src="Assests/AI-Driven Analytics Platform.jpeg"
               alt="AI-Driven Analytics Platform"
             />
             <div class="portfolio-item-content">
@@ -80,7 +80,7 @@
           </div>
           <div class="portfolio-item">
             <img
-              src="https://cdn.pixabay.com/photo/2017/08/06/05/44/people-2589186_1280.jpg"
+              src="Assests/Smart City Infrastructure.jpeg"
               alt="Smart City Infrastructure"
             />
             <div class="portfolio-item-content">
@@ -98,7 +98,7 @@
           </div>
           <div class="portfolio-item">
             <img
-              src="https://cdn.pixabay.com/photo/2015/05/01/08/47/art-747921_1280.jpg"
+              src="Assests/Quantum-Safe Encryption.jpeg"
               alt="Quantum-Safe Encryption"
             />
             <div class="portfolio-item-content">
@@ -116,7 +116,7 @@
           </div>
           <div class="portfolio-item">
             <img
-              src="https://cdn.pixabay.com/photo/2017/07/27/18/28/high-tech-2546290_1280.jpg"
+              src="Assests/AR-Enhanced Training Platform.jpeg"
               alt="AR-Enhanced Training Platform"
             />
             <div class="portfolio-item-content">
@@ -134,7 +134,7 @@
           </div>
           <div class="portfolio-item">
             <img
-              src="https://cdn.pixabay.com/photo/2020/05/18/00/13/iphone-5183942_1280.jpg"
+              src="Assests/Blockchain Supply Chain.jpeg"
               alt="Blockchain Supply Chain"
             />
             <div class="portfolio-item-content">
@@ -152,7 +152,7 @@
           </div>
           <div class="portfolio-item">
             <img
-              src="https://cdn.pixabay.com/photo/2020/05/11/11/41/high-tech-5157719_1280.jpg"
+              src="Assests/AI-Powered Healthcare Assistant.jpeg"
               alt="AI-Powered Healthcare Assistant"
             />
             <div class="portfolio-item-content">
